tooling/nargo_cli/tests/snapshots/execute__tests__regression_7612_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12091625883036440340",
  "abi": {
    "parameters": [
      {
        "name": "array",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "struct",
            "path": "Data",
            "fields": [
              {
                "name": "fields",
                "type": {
                  "kind": "array",
                  "length": 1,
                  "type": {
                    "kind": "field"
                  }
                }
              },
              {
                "name": "counter",
                "type": {
                  "kind": "integer",
                  "sign": "unsigned",
                  "width": 32
                }
              }
            ]
          }
        },
        "visibility": "databus"
      },
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VXwW7bMAylHCupkgYpts8YMEhJOqeXoYe1wK7bLhuwg7Ek3+FP37SSzTMtpC1iCggkixTfI0VJjKOnVv37OR7XMEc8L2OCudzuuY+XtTSirWjF0RlwtOBZGfGkiSKtk6Lk1G/uA/eYVJMRnQ4Kd0z7u7htQsG/EflvAti0tF/b2I8ztvOl69snhStzD90plg9qjeg8gs4j6OQm/hjt99Y4Xusl9WNU8s3bYG+cwsN9QZngz8k0N5NTeMJHx6dS8ZnZ8Ili/8rIvvgbCv5i/GfK34VR/CUX58BH5+K1Dfb6tbko+HPF1SoXr2m4NxgfycWl6HQnPkHJ6m7oh8g8yGR/c959AP9QhnzwfpBcvaFhrghv43OTjM9Neuu5WfH3FGRBxTW8Ma64XuwuqfwWoQxrJXnLsu1PdBo3PDZ+25qgOI19v70v8Ees3GYd9eL+v4c5ORdyTq5QX8kCyOqujzPn7xpw0Jbw8Er/lr9X3E9hjay/KeBPFX6Pd2FOxyUU9ENBP+feRx4v+Jdz6Afo6Tcbc3BC5RyQFgpz99zHC5vgSW3lz3DxSvc7+P/ZnmvSXN0ZrqWY6vrRuM5fO4Vb0fm9Nr4Lnu9s3JtJITa6trOqu3Wt6WlYa5ZyU/S/cp/P2i/QxzXoo4O5Sun7F2IifFY03COv4mXxVkT+r6DPYymf3Bk+NB6f5BWfbwrX6k17p/xBrHwXyb20oFONUHfjc2l2T/8fcpN30FP/fJHC90r/J39jDS19fQHPY9Om46Y9trftfr/90+qYEcRsYYB/2N3t493x0KaU1vt4eAn/L1fHqZ/9FAAA",
  "debug_symbols": "ldTbasQgEAbgd5lrLzzE6ORVSllMYhZBTDBJoYS8e7Us7RIWlrkRR/xwYOQ/YPT9fr+FNM0rdB8HxHlwW5hTqY6TQZ9DjOF+ez4GXhdtf++vi0u1XDeXN+iERgY+jWXXYvFTiB46zc9PBhqpopUvBaqHkFxehSKLhiz0S2HNn1BX0ZKFIQtLFkgVhpOFIAtJFoosGrIgz9y8m7nQV2HIwpIFUoXlZCFo4izVl8vB9dE/Ymfa0/CUQtv34i+BtOR58OOefY2m/1SqX6FRTKvSh6id24ZZrEVtCjlDWd4rb/4A",
  "file_map": {
    "50": {
      "source": "pub struct Data {\n    fields: [Field; 1],\n    counter: u32,\n}\n\nfn main(array: call_data(0) [Data; 1], x: bool) {\n    let index = if x { 0 } else { 1 };\n    if index != 0 {\n        assert(array[index - 1].counter < 3);\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
